# mx-crash-sc

./: Cargo.toml  sc-config.toml
.github/workflows/: actions.yml  proxy_compare.yml
interactor/: Cargo.toml
interactor/src/: interact.rs  proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
mx-crash-sc/: Cargo.toml  sc-config.toml
mx-crash-sc/interactor/: Cargo.toml  state.toml
mx-crash-sc/interactor/keystores/: keystore.json
mx-crash-sc/interactor/src/: interact.rs  interactor_main.rs  proxy.rs
mx-crash-sc/interactor/tests/: interact_cs_tests.rs  interact_tests.rs
mx-crash-sc/meta/: Cargo.toml
mx-crash-sc/meta/src/: main.rs
mx-crash-sc/src/: mx_crash_sc.rs  mx_crash_sc_proxy.rs
mx-crash-sc/src/basics/: constants.rs  events.rs  storage.rs  views.rs
mx-crash-sc/src/logic/: awarding.rs  claim.rs  end_game.rs  init_game.rs  mod.rs  submit_bet.rs
mx-crash-sc/src/specific/: bet.rs  crashpoint.rs  mod.rs  status.rs
mx-crash-sc/tests/: mx_crash_sc_test.rs
mx-crash-sc/tests/contract_setup/: mod.rs
mx-crash-sc/wasm/: Cargo.toml
mx-crash-sc/wasm/src/: lib.rs
mx-pay-for-user-sc/: Cargo.toml  sc-config.toml
mx-pay-for-user-sc/interactor/: Cargo.toml
mx-pay-for-user-sc/meta/: Cargo.toml
mx-pay-for-user-sc/src/: bot_operations.rs  mx_pay_for_user_proxy.rs  mx_pay_for_user_sc.rs  storage.rs  user_operations.rs
mx-pay-for-user-sc/tests/: mx_crash_sc_test.rs  mx_pay_for_user_sc_scenario_go_test.rs  (+1 more)
src/: mx_crash_sc.rs  mx_crash_sc_proxy.rs
tests/: mx_crash_sc_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+23 files in other folders)
