[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[lib]
path = "src/interact.rs"

[dependencies]
toml = "0.8.6"
regex = "1.10"

[dependencies.mx-crash-sc]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.59.0"

[dependencies.multiversx-sc]
version = "0.59.0"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
chain-simulator-tests = []
